third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/string/bad-escape-2.stderr
TOML parse error at line 1, column 43
  |
1 | invalid-escape = "This string has a bad \  escape character."
  |                                           ^
invalid escape sequence
expected `b`, `f`, `n`, `r`, `t`, `u`, `U`, `\`, `"`
